重构代码初次运行

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':main', ':ui', ':feature', ':rn', ':common', ':test', ':knowledge'
+include ':main', ':ui', ':function', ':common', ':test', ':summary'
