--- a/build.gradle
+++ b/build.gradle
@@ -21,3 +21,28 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    minSdkVersion = 8
+    compileSdkVersion = 23
+    targetSdkVersion = compileSdkVersion
+    buildToolsVersion = '23.0.2'
+    javaVersion = JavaVersion.VERSION_1_7
+
+    GROUP = 'com.squareup.leakcanary'
+    VERSION_NAME = "1.6-SNAPSHOT"
+    POM_PACKAGING = "pom"
+    POM_DESCRIPTION= "Leak Canary"
+
+    POM_URL="http://github.com/square/leakcanary/"
+    POM_SCM_URL="http://github.com/square/leakcanary/"
+    POM_SCM_CONNECTION="scm:git:https://github.com/square/leakcanary.git"
+    POM_SCM_DEV_CONNECTION="scm:git:git@github.com:square/leakcanary.git"
+
+    POM_LICENCE_NAME="The Apache Software License, Version 2.0"
+    POM_LICENCE_URL="http://www.apache.org/licenses/LICENSE-2.0.txt"
+    POM_LICENCE_DIST="repo"
+
+    POM_DEVELOPER_ID="square"
+    POM_DEVELOPER_NAME="Square, Inc."
+}
