--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':main', ':ui', ':function', ':common', ':test', ':summary'
+include ':main', ':ui', ':function', ':common', ':test', ':summary', ':leakcanary-android', ':leakcanary-analyzer', ':leakcanary-watcher'
