--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ task clean(type: Delete) {
 
 ext {
     minSdkVersion = 8
-    compileSdkVersion = 23
+    compileSdkVersion = 25
     targetSdkVersion = compileSdkVersion
     buildToolsVersion = '23.0.2'
     javaVersion = JavaVersion.VERSION_1_7
@@ -46,3 +46,11 @@ ext {
     POM_DEVELOPER_ID="square"
     POM_DEVELOPER_NAME="Square, Inc."
 }
+
+ext.deps = [
+        // Test dependencies
+        junit      : 'junit:junit:4.12',
+        truth      : 'com.google.truth:truth:0.28',
+        robolectric: 'org.robolectric:robolectric:3.1',
+        mockito    : "org.mockito:mockito-core:1.10.19"
+]
